--- a/src/Formulaire/Formulaire.css
+++ b/src/Formulaire/Formulaire.css
@@ -1,12 +1,20 @@
 .Essayer {
+    
     padding-top: 2%;
     margin-top: 50px;
     border-radius: 2%; 
-   
     width: 500px;
-    height: 400px;
+    height: 550px;
     margin: 100px auto ;
-    background-color : #f4f4f4 ;
+    background: rgba(0, 0, 0, 0.5);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+
+}
+
+.Cursor {
+    cursor: pointer;
 }
 .Essayer span {
      font-weight: lighter;
@@ -14,30 +22,81 @@
      color: red;
 }
 .essaye::placeholder {
-    padding-left:5px;
      font-weight: bold;
     font-style: oblique;
     color :red ;
     
 }
-.bold::placeholder {
-    padding-left: 20px;  
 
-    color :rgb(116, 111, 111); 
+
+input::-webkit-input-placeholder {
+    color: #999;
+}
+input:focus::-webkit-input-placeholder {
+    padding-left: 59px;
+    margin-top: 5%;
+}
+
+
+.fa-clickable {
+    cursor:pointer;
+    outline:none;
+}
+/* Firefox < 19 */
+input:-moz-placeholder {
+    color: #999;
+}
+.Accueil {
+    color :white ;
+    font-weight: bold;
+    font-size: 20px;;
+}
+input:focus:-moz-placeholder {
+    padding-bottom: 10px;
+}
+
+/* Firefox > 19 */
+input::-moz-placeholder {
+    color: #999;
+}
+input:focus::-moz-placeholder {
+  
+    padding-bottom: 10px;
+}
+
+/* Internet Explorer 10 */
+input:-ms-input-placeholder {
+    padding-bottom: 10px;
+}
+input:focus:-ms-input-placeholder {
+    padding-bottom: 10px;
+}
+.bold::placeholder {
+
+    padding-bottom: 10px;
 }
 .Essayer label {
-    color : black; 
+    color : white; 
     font-weight: bold;
 }
 .Essayer input {
     margin-bottom: 20px;
     height: 40px;
-    width: 400px;
+    width: 230px;
    font-weight: bold;
    padding-left:5px;
+   border: none;
+ color:white;
+   border-bottom: 1px solid black;
+
+   background-color :transparent ;
+
     
 }
-
+img {
+height: 120px;    
+margin-bottom: 20px;
+}
 p{
 font-weight: bold;
 font-style: oblique;
@@ -47,9 +106,12 @@ button {
     font-style: italic;
     margin-top: 20px;
     height: 40px;
-    background-color:#00b241;
-    color :white ;
+    color:white;
+    border-radius: 20px;
+    background-color:#ff3366;
     width : 300px; 
+    outline: none;
+    border: none;
 }
 @media only screen and (max-width: 515px) {
     
@@ -57,7 +119,7 @@ button {
       width :300px ;
     }
     .Essayer input {
-       
+        color : white;
         width: 150px;
      
         
