--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color : lightgreen ;
+  background-image: url("./sea.png");
   margin: 0;
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -11,6 +11,11 @@ body {
 }
 .Registre {
   margin-left: 50px;
+  color : white;
+  font-style: oblique;
+  font-weight: bold;
+  font-size: 13px;
+  
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
